--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload":{
         "psr-4":{
-            "Adventurelib":"src/"
+            "Adventurelib\\":"src/"
         }
     }
 }
